# slack-morphism-rust

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md  block-kit-support.html  chapter_1.html  events-api-axum.html  events-api-hyper.html  events-api.html  getting-started.html  hyper-connections-types.html  index.html  intro.html  limitations.html  observability-tracing.html  pagination-support.html  print.html  rate-control-and-retries.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-18b82568.js  searchindex-21ee65d1.js  searchindex-6f639229.js  searchindex-eee6a9e9.js  searchindex-fd37f347.js  searchindex.js  searchindex.json  send-webhooks-messages.html  socket-mode.html  toc-132cf9d3.js  toc-b950a5a0.js  toc.html  toc.js  user-state-in-event-listener.html  web-api.html
.github/: pull_request_template.md
.github/workflows/: gh-pages.yml  security-audit.yml  tests.yml  windows-build.yml
docs/: book.toml
docs/src/: SUMMARY.md  block-kit-support.md  chapter_1.md  events-api-axum.md  events-api-hyper.md  events-api.md  getting-started.md  hyper-connections-types.md  intro.md  limitations.md  observability-tracing.md  pagination-support.md  rate-control-and-retries.md  send-webhooks-messages.md  socket-mode.md  user-state-in-event-listener.md  web-api.md
examples/: axum_events_api_server.rs  client.rs  client_with_tracing.rs  events_api_server.rs  proxy_client.rs  rate_control_client.rs  socket_mode.rs  state_management.rs  webhook_message.rs
src/: client.rs  errors.rs  lib.rs  listener.rs  multipart_form.rs  prelude.rs  scroller.rs  signature_verifier.rs  token.rs
src/api/: apps.rs  assistant.rs  auth.rs  bots.rs  chat.rs  conversations.rs  emoji.rs  files.rs  mod.rs  oauth.rs  pins.rs  reactions.rs  stars.rs  team.rs  test.rs  usergroups.rs  users.rs  views.rs  webhook.rs
src/api/fixtures/: slack_api_apps_manifest_create_request.json  slack_api_emoji_list_response.json
src/axum_support/: mod.rs  signature_verify_middleware.rs  slack_event_extractors.rs  slack_events_extractors.rs  slack_events_middleware.rs  slack_oauth_routes.rs
src/client/: Cargo.toml
src/client/src/: client.rs  errors.rs  lib.rs  listener.rs  prelude.rs  scroller.rs  signature_verifier.rs  token.rs
src/client/src/api/: apps.rs  auth.rs  bots.rs  chat.rs  conversations.rs  mod.rs  oauth.rs  team.rs  test.rs  users.rs  views.rs  webhook.rs
src/client/src/errors/: mod.rs
src/client/src/listener/: command_events.rs  interaction_events.rs  mod.rs  oauth.rs  push_events.rs  signature_verifier.rs
src/client/src/ratectl/: config.rs  limit.rs  mod.rs  special_limit.rs  team_limits.rs  throttler.rs  throttling_counter.rs  tier.rs
src/client/src/socket_mode/: callbacks.rs  clients.rs  clients_manager.rs  clients_manager_listener.rs  config.rs  listener.rs  mod.rs  socket_mode_connector.rs  socket_mode_manager.rs  wss_client_id.rs
src/client/src/test/: mod.rs
src/client/src/throttler/: config.rs  mod.rs  special_limit.rs  tier.rs
src/client/src/users/: mod.rs
src/examples/: Cargo.toml
src/examples/src/: main.rs  templates.rs
src/hyper/: Cargo.toml
src/hyper/examples/: client.rs  events_api_server.rs  proxy-client.rs  rate-control-client.rs  socket_mode.rs  state_management.rs  webhook_message.rs
src/hyper/src/: connector.rs  lib.rs  scroller_ext.rs
src/hyper/src/listener/: command_events.rs  interaction_events.rs  mod.rs  oauth.rs  push_events.rs
src/hyper/src/ratectl/: mod.rs
src/hyper/src/socket_mode/: mod.rs  tokio_clients_manager.rs  tungstenite_wss_client.rs
src/hyper_tokio/: connector.rs  hyper_errors.rs  hyper_ext.rs  hyper_reqresp.rs  mod.rs  scroller_ext.rs
src/hyper_tokio/listener/: command_events.rs  interaction_events.rs  mod.rs  oauth.rs  push_events.rs
src/hyper_tokio/ratectl/: mod.rs
src/hyper_tokio/socket_mode/: mod.rs  tokio_clients_manager.rs  tungstenite_wss_client.rs
src/models/: Cargo.toml  mod.rs
src/models/apps/: manifest.rs
src/models/blocks/: datetime.rs  dsl.rs  kit.rs  mod.rs  view.rs  workflow.rs
src/models/blocks/fixtures/: slack_alert_block.json  slack_card_block.json  slack_context_actions_block.json  slack_conversations_select_with_filter.json  slack_home_view.json  slack_image_blocks.json  slack_rich_text_block.json  slack_table_block.json  slack_task_card_block.json  slack_workflow_button.json
src/models/common/: assistant.rs  bot.rs  channel.rs  emoji.rs  formatters.rs  icon.rs  mod.rs  pin.rs  reaction.rs  star.rs  team.rs  user.rs
src/models/events/: command.rs  interaction.rs  mod.rs  push.rs  view.rs
src/models/events/fixtures/: message_changed.json  message_changed_by_bot.json
src/models/files/: comments.rs  mod.rs
src/models/messages/: mod.rs
src/models/socket_mode/: mod.rs
src/models/src/: lib.rs
src/models/src/apps/: manifest.rs  mod.rs
src/models/src/blocks/: block_text.rs  datetime.rs  dsl.rs  formatters.rs  kit.rs  mod.rs  view.rs
src/models/src/common/: bot.rs  channel.rs  icon.rs  mod.rs  reaction.rs  team.rs  user.rs
src/models/src/events/: authorization.rs  command.rs  interaction.rs  mod.rs  push.rs
src/models/src/files/: mod.rs
src/models/src/messages/: datetime.rs  mod.rs  templates.rs
src/models/src/socket_mode/: mod.rs
src/ratectl/: config.rs  limit.rs  special_limit.rs  throttler.rs  throttling_counter.rs
src/socket_mode/: callbacks.rs  clients_manager.rs  clients_manager_listener.rs  config.rs  listener.rs  wss_client_id.rs
