[package]
name = "slack-morphism"
version = "0.34.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "Slack Morphism is a modern client library for Slack Web/Events API and Block Kit"
homepage = "https://github.com/abdolence/slack-morphism-rust"
repository = "https://github.com/abdolence/slack-morphism-rust"
documentation = "https://docs.rs/slack_morphism"
keywords = ["slack", "client"]
categories = ["api-bindings"]
readme = "../../README.md"
include = ["Cargo.toml", "src/**/*.rs", "../../README.md", "../../LICENSE"]

[badges]
maintenance = { status = "actively-developed" }


[lib]
name = "slack_morphism"
path = "src/lib.rs"

[dependencies]
slack-morphism-models = { path = "../models", version = "^0.35.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
rvstruct = "0.3"
rsb_derive = "0.5"
url = "2.2"
futures = "0.3"
futures-util = "0.3"
base64 = "0.13"
hex = "0.4"
tracing = "0.1"
ring = "0.16"
lazy_static = "1.4"
http = "0.2"
async-trait = "0.1"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
cargo-audit = "0.16"

[package.metadata.release]
tag-prefix=""
