[package]
name = "slack-morphism-examples"
version = "0.1.0"
authors = ["Abdulla Abdurakhmanov <abdulla@latestbit.com>"]
edition = "2018"

[dependencies]
slack-morphism-models = { path = "../models", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"
