[package]
name = "slack-morphism-hyper"
version = "0.17.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "Slack Morphism Hyper/Tokio support library"
homepage = "https://github.com/abdolence/slack-morphism-rust"
repository = "https://github.com/abdolence/slack-morphism-rust"
documentation = "https://docs.rs/slack_morphism"
keywords = ["slack", "client"]
categories = ["api-bindings"]
readme = "../../README.md"
include = ["Cargo.toml", "src/**/*.rs", "../../README.md", "../../LICENSE"]

[lib]
name = "slack_morphism_hyper"
path = "src/lib.rs"

[dependencies]
slack-morphism = { path = "../client", version = "^0.17.0"}
slack-morphism-models = { path = "../models", version = "^0.17.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11"
rvstruct = "0.3"
rsb_derive = "0.5"
hyper = { version ="0.14", features = ["full"] }
tokio = { version = "1.13", features = ["full"] }
tokio-stream = { version = "0.1.8" }
hyper-rustls = "0.22"
url = "2.2"
mime = "0.3"
futures = "0.3"
futures-util = "0.3"
bytes = "1.1"
base64 = "0.13"
hex = "0.4"
log = "0.4"
ring = "0.16"
lazy_static = "1.4"
async-trait = "0.1.51"
http = "0.2"
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
rand = "0.8.4"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }

[package.metadata.release]
disable-tag=true
