[package]
name = "slack-morphism-hyper"
version = "0.33.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2021"
license = "Apache-2.0"
description = "Slack Morphism Hyper/Tokio support library"
homepage = "https://github.com/abdolence/slack-morphism-rust"
repository = "https://github.com/abdolence/slack-morphism-rust"
documentation = "https://docs.rs/slack_morphism"
keywords = ["slack", "client"]
categories = ["api-bindings"]
readme = "../../README.md"
include = ["Cargo.toml", "src/**/*.rs", "../../README.md", "../../LICENSE"]

[lib]
name = "slack_morphism_hyper"
path = "src/lib.rs"

[dependencies]
slack-morphism = { path = "../client", version = "^0.33.0"}
slack-morphism-models = { path = "../models", version = "^0.33.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
rvstruct = "0.3"
rsb_derive = "0.5"
hyper = { version ="0.14", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tokio-stream = { version = "0.1.8" }
hyper-rustls = { version="0.23", features = ["rustls-native-certs", "http2"] }
url = { version = "2.2", features = ["serde"]}
mime = "0.3"
futures = "0.3"
futures-util = "0.3"
bytes = "1.1"
base64 = "0.13"
hex = "0.4"
tracing = "0.1"
ring = "0.16"
lazy_static = "1.4"
async-trait = "0.1.52"
http = "0.2"
tokio-tungstenite = { version = "0.17.1", features = ["rustls-tls-native-roots"] }
rand = "0.8.5"
async-recursion="1.0.0"
signal-hook = { version = "0.3.13", features = ["extended-siginfo"]}
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
hyper-proxy = "0.9"
cargo-audit = "0.16"

[package.metadata.release]
disable-tag=true
