[package]
name = "slack-morphism-models"
version = "0.1.0"
authors = ["Abdulla Abdurakhmanov <abdulla@latestbit.com>"]
edition = "2018"

[lib]
name = "slack_morphism_models"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"
rvs_derive = "0.1"
rsb_derive = "0.2"
chrono = { version = "0.4", features = ["serde"] }
