[package]
name = "slack-morphism-models"
version = "0.5.4"
authors = ["Abdulla Abdurakhmanov <abdulla@latestbit.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Slack Morphism Models"
homepage = "https://github.com/abdolence/slack-morphism-rust"
repository = "https://github.com/abdolence/slack-morphism-rust"
documentation = "https://docs.rs/slack_morphism"
keywords = ["slack", "client"]
categories = ["api-bindings"]
readme = "../../README.md"
include = ["Cargo.toml", "src/**/*.rs", "../../README.md", "../../LICENSE"]

[lib]
name = "slack_morphism_models"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
rvstruct = "0.2"
rsb_derive = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.release]
disable-tag=true
